--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,6 @@
     "ui",
     "user interface"
   ],
-  "homepage": "",
   "license": "MIT",
   "authors": [
     {
@@ -39,7 +38,7 @@
       "Runroom\\Bundle\\UiBundle\\": ""
     }
   },
-  "minimum-stability": "dev",
+  "minimum-stability": "stable",
   "prefer-stable": true,
   "repositories": [
     {
@@ -52,10 +51,5 @@
       "@composer validate --strict",
       "bin/phpspec run --ansi --no-interaction"
     ]
-  },
-  "extra": {
-    "branch-alias": {
-      "dev-master": "1.2-dev"
-    }
   }
 }
