--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
       "Runroom\\Bundle\\UiBundle\\": ""
     }
   },
-  "minimum-stability": "stable",
+  "minimum-stability": "dev",
   "prefer-stable": true,
   "repositories": [
     {
@@ -51,5 +51,10 @@
       "@composer validate --strict",
       "bin/phpspec run --ansi --no-interaction"
     ]
+  },
+  "extra": {
+    "branch-alias": {
+      "dev-master": "1.2-dev"
+    }
   }
 }
