--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
   },
   "autoload": {
     "psr-4": {
-      "Runroom\\Bundle\\UiBundle\\": ""
+      "RunroomUi\\Bundle\\UiBundle\\": ""
     }
   },
   "minimum-stability": "dev",
